--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
+          <h1 class="text-uppercase"><strong>WEBSITE PERTAMANYA SELO</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr> 
           <a href="https://mailchi.mp/c52944d2492d/seloaziz">
-            <button class="btn btn-primary btn-xl">Find out more!</button>
+            <button class="btn btn-primary btn-xl">Klik buat didata cepett!</button>
           </a>
         </section>
       </div>
